# ZenithFence

./: .gitignore  Cargo.toml  Justfile  LICENSE  PacketDoc.md  README.md  ZenithFence64.inf  deploy.bat  go.work  link.bat
c_helper/: c_helper.vcxproj  helper.c
c_helper/ARM64/: c_helper.lib
c_helper/x64/: c_helper.lib
codegen/: Cargo.toml
codegen/src/: main.rs
data_types/: Cargo.toml
data_types/src/: lib.rs
driver/: Cargo.toml  Makefile.toml  README.md  build.rs
driver/.cargo/: config.toml
driver/src/: ale_callouts.rs  array_holder.rs  bandwidth.rs  callouts.rs  common.rs  connection.rs  connection_cache.rs  connection_map.rs  connection_members.rs  device.rs  driver.rs  driver_hashmap.rs  entry.rs  id_cache.rs  lib.rs  logger.rs  mpsc_queue.rs  null_allocator.rs  packet_callouts.rs  packet_info_v4.rs  packet_util.rs  rcu_port.rs  stream_callouts.rs  types.rs
driver/src/cache/: mod.rs  packet_cache.rs
driver/src/filter_engine/: mod.rs
driver/src/protocol/: mod.rs  protocol.fbs  protocol_generated.rs
kext_interface/: command.go  go.mod  go.sum  info.go  ioctl.go  kext.go  kext_file.go  kext_file_test.go  protocol.go  protocol_test.go  version.txt
kext_interface/Protocol/: Command.go  CommandUnion.go  Info.go  InfoUnion.go  LogLine.go  Packet.go  RedirectResponse.go  Shutdown.go  VerdictResponse.go
kext_interface/fbs/: generate.sh  protocol.fbs
kext_tester/: decoder.go  go.mod  go.sum  main.go
kext_tester/Protocol/: Packet.go
libs/arm64/: hal.lib
libs/x64/: hal.lib
link_kit/: Cargo.toml
link_kit/src/: lib.rs
pm_kext/: pm_kext.vcxproj  pm_kext.vcxproj.filters
protocol/: Cargo.toml  README.md
protocol/src/: command.rs  info.rs  lib.rs
release/: Cargo.toml  README.md  config.json.example
release/src/: main.rs
release/templates/: PortmasterKext.ddf  PortmasterKext64.inf  ZenithFence.ddf  ZenithFence64.inf  build_cab.bat  finalize.bat
src/: allocator.rs  driver.rs  ioqueue.rs  lib.rs  register.rs
src/c/: helper.c
src/filter_engine/: callouts.rs
src/wdk/: consts.rs  ioctl.rs  mod.rs
wdk/: Cargo.toml  README.md  build.rs
wdk/src/: allocator.rs  attributes.rs  consts.rs  debug.rs  device.rs  driver.rs  error.rs  fast_mutex.rs  ffi.rs  filter_engine.rs  interface.rs  ioqueue.rs  irp_helpers.rs  layer.rs  lib.rs  lock.rs  rw_spin_lock.rs  spin_lock.rs  utils.rs
wdk/src/filter_engine/: callout.rs  callout_data.rs  classify.rs  connect_request.rs  ffi.rs  layer.rs  metadata.rs  mod.rs  net_buffer.rs  packet.rs  stream_data.rs  transaction.rs
wdk_macro/: Cargo.toml
wdk_macro/src/: lib.rs
wfp_lib/: helper.c  wfp_lib.sln  wfp_lib.vcxproj  wfp_lib.vcxproj.filters
wfp_lib/x64/: wfp_lib.lib
