[package]
name = "portmaster-windows-kext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'unwind'
lto='thin'

[profile.dev]
panic = 'unwind'
lto='thin'

[lib]
name = "kext"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies.widestring]
version = "1.0.2"
default-features = false 
features = ["alloc"]

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "winioctl"
    ]

[dependencies.windows-sys]
version = "0.48.0"
# git = "https://github.com/microsoft/windows-rs"
# rev = "78a0dbea48f856b03f3e7e650e0e385047d8a10b"
# path = "../windows-rs/crates/libs/sys"

# default-features = false 
features = ["Wdk", "Wdk_System", "Win32_System", "Win32_System_Kernel", "Win32_Security", "Win32_System_Power", "Win32_System_WindowsProgramming", "Win32_Foundation"]

# ", feature = "Win32_Foundation", feature = "Win32_Graphics_DirectDraw", feature = "Win32_Security"# feature = "", feature = , feature = "Win32_Foundation", feature = "Win32_Graphics_DirectDraw", feature = "Win32_Security"

# features = ["Wdk", "Wdk_Foundation", "Wdk_Storage_FileSystem", "Wdk_System_SystemServices", "Win32_Foundation", "Win32_Security", "Win32_System_Kernel", "Win32_System_Power", "Win32_System_WindowsProgramming"]


# [dependencies.windows-targets]
# version = "0.48"

# [dev-dependencies.windows-bindgen]
# version = "0.48"
