[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "driver"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wdk = {path = "../wdk"}
flatbuffers = {version = "23.5", default-features = false}

[dependencies.windows-sys]
# version = "0.48.5"
git = "https://github.com/microsoft/windows-rs"
features = ["Wdk_Foundation", "Wdk_Storage_FileSystem", "Wdk_System_SystemServices", "Win32_Foundation", "Win32_Security", "Win32_System_IO", "Win32_System_Kernel", "Win32_System_Power", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_WindowsFilteringPlatform"]

[target.'cfg(windows)'.build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"
