[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "driver"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
wdk = { path = "../wdk" }
num = { version = "0.4", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false }
ciborium = { git = "https://github.com/enarx/ciborium", rev = "09134e6", default-features = false }
ciborium-io = { git = "https://github.com/enarx/ciborium", rev = "09134e6", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
smoltcp = { version = "0.10", default-features = false, features = ["proto-ipv4", "proto-ipv6"] }
allocator-api2 = { version = "0.2.16", default-features = false, features = ["alloc"] }

[dependencies.windows-sys]
git = "https://github.com/microsoft/windows-rs"
rev = "41ad38d8c42c92fd23fe25ba4dca76c2d861ca06"
features = ["Wdk_Foundation", "Wdk_Storage_FileSystem", "Wdk_System_SystemServices", "Win32_Foundation", "Win32_Security", "Win32_System_IO", "Win32_System_Kernel", "Win32_System_Power", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_WindowsFilteringPlatform"]
