[package]
name = "wdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.widestring]
version = "1.0.2"
default-features = false 
features = ["alloc"]

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "winioctl"
    ]

[dependencies.windows-sys]
version = "0.48.0"
features = ["Wdk", "Wdk_System", "Win32_System", "Win32_System_Kernel", "Win32_Security", "Win32_System_Power", "Win32_System_WindowsProgramming", "Win32_Foundation"]
