[package]
name = "wdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntstatus = { git = "https://github.com/vlabo/ntstatus", default-features = false}
onlyerror = {version = "0.1", default-features = false }
ciborium = {git="https://github.com/vlabo/ciborium", version = "0.2", default-features = false }
ciborium-io = {git="https://github.com/vlabo/ciborium", version = "0.2", default-features = false }
generic_once_cell = "0.1"
lock_api = "0.4"

[dependencies.widestring]
version = "1.0.2"
default-features = false 
features = ["alloc"]

[target.'cfg(windows)'.dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
    "winioctl"
    ]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = ["Wdk", "Wdk_System", "Win32_System", "Win32_System_Kernel", "Win32_Security", "Win32_System_Power", "Win32_System_WindowsProgramming", "Win32_Foundation"]

[target.'cfg(windows)'.build-dependencies]
winreg = "0.7.0"
failure = "0.1.8"
